- Added new features
    · Added a way to check Historic Changelog in Settings
    · Rewritten all Cleaner code related path managing
    · Updated Cleaner App
    · Updated Cleaner Modal
    · Updated Console Commands
        - get_all_detected_paths -> It now returns a treeview
        - list_available_cleaner_scopes -> Updated to new paths managing system

